DearImguiSharp/ImGui.cs


            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igInputFloat2")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool InputFloat2([MarshalAs(UnmanagedType.LPUTF8Str)] string label, Vector2* v, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igInputFloat3")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool InputFloat3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, Vector3* v, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igInputFloat4")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool InputFloat4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, Vector4* v, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);


            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igColorEdit3")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool ColorEdit3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* col, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igColorEdit4")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool ColorEdit4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* col, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igColorPicker3")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool ColorPicker3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* col, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igColorPicker4")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool ColorPicker4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* col, int flags, float* ref_col);


            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igColorEdit3")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool ColorEdit3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, Vector3* col, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igColorEdit4")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool ColorEdit4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, Vector4* col, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igColorPicker3")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool ColorPicker3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, Vector3* col, int flags);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("cimgui.dll", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "igColorPicker4")]
            [return: MarshalAs(UnmanagedType.I1)]
            public static extern bool ColorPicker4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, Vector4* col, int flags, float* ref_col);
            #endregion

        }
    }
}
